<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/asscclblue"
        android:id="@+id/topLayout">

        <TextView
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/accName"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountName"
        android:id="@+id/emailId"
        android:text="@string/email"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/twenty"
        android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_below="@+id/emailId"
            android:layout_marginTop="@dimen/twenty"
            android:id="@+id/linearLayout">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/twenty">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/depositText"
                android:text="@string/deposited"
                android:textSize="@dimen/twenty"
                android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/depositText"
                    android:src="@drawable/add"
                    android:layout_marginLeft="@dimen/ten"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/depositText"
                    android:text="@string/Rs"
                    android:textSize="@dimen/twenty"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/ten"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/withdrawText"
                    android:text="@string/withdrawn"
                    android:textSize="@dimen/twenty"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/withdrawText"
                    android:src="@drawable/withdraw"
                    android:layout_marginLeft="@dimen/ten"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/withdrawText"
                    android:text="@string/Rs"
                    android:textSize="@dimen/twenty"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/ten"/>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/twenty"
            android:id="@+id/depositLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add"
            android:id="@+id/depositImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/depositImage"
            android:text="@string/depositMoney"
            android:textSize="@dimen/twenty"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/ten"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayout"
        android:layout_below="@id/topLayout">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabs">
        </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/viewpager"
                android:layout_below="@+id/tabs">
            </android.support.v4.view.ViewPager>


    </RelativeLayout>

</RelativeLayout>